<resources>
    <string name="app_name">cuidaVet</string>
    <string name="iniciar">Iniciar</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="calendario">Calendario</string>
    <string name="usuarioNuevo">Usuario Nuevo</string>
    <string name="foro">Foro</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="compras">Compras</string>
    <string name="misMascotas">Mis mascotas</string>
    <string name="emergencias">Emergencias</string>
    <string name="nombreduenio">Nombre (dueñ@)</string>
    <string name="correo">Correo Electrónico</string>
    <string name="registro">Registro</string>
    <string name="siguiente">Siguiente</string>
    <string name="avisoPrivasidad">Aviso de privacidad</string>
    <string name="hecho">Hecho</string>
    <string name="nombreMascota">Nombre de la mascota</string>
    <string name="edad">Edad</string>
    <string name="raza">Raza</string>
    <string name="empezar">Empezar</string>
    <string name="foroYtips">Foro y Tips</string>
    <string name="Tips">Tips</string>
    <string name="habitosSaludables">Hábitos Saludables</string>
    <string name="gestacion">Gestación</string>
    <string name="tipsTexto">¿Qué necesitas\n para ser el\n mejor dueño?</string>
    <string name="cepillo">Cepillo para el pelo</string>
    <string name="shampoo">Shampoo</string>
    <string name="correa">Correa y collar</string>
    <string name="cortaunas">Cortauñas</string>
    <string name="ropaInvierno">Ropa para invierno</string>
    <string name="cartillaVacunacion">Cartilla de Vacunación</string>
    <string name="appCuidaVet">App CuidaVet</string>
    <string name="caminar">Caminar</string>
    <string name="horarios">Horarios</string>
    <string name="banios">Baños</string>
    <string name="veterinario">Citas al veterinario</string>
    <string name="articulos">Artículos</string>
    <string name="nombre">Nombre</string>
    <string name="dar">Dar la patita</string>
    <string name="setarse">Sentarse</string>
    <string name="ir">Ir por la pelota</string>
    <string name="privacidadTexto">Lorem ipsum dolor sit\n amet, consectetuer\n adipiscing elit. Aenean\n commodo ligula eget\n dolor. Aenean massa.\n Cum sociis natoque\n penatibus et magnis\n dis parturient montes,\n nascetur ridiculus mus.</string>
    <string name="notas">Notas</string>
    <string name="cambiar_usuario">Cambiar usuario</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="aviso_de_privacidad">Aviso de privacidad</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="guardar">Guardar</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="usuario_actual">Usuario Actual</string>
    <string name="confirmar">Confirmar</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="contrasena_actual">Contraseña Actual</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>


</resources>