<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_flechaRegresarTips"
        android:layout_width="122dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/flecha" />

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_tips"
        android:hint="@string/tipsTexto"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="@color/white"
        android:textSize="23sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="476dp"
        android:layout_weight="3"
        android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cepillo"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="@string/cepillo"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_shampoo"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="@string/shampoo"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_correa"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="@string/correa"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cortaunas"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_button_white"
        android:fontFamily="@font/alataregular"
        android:paddingLeft="14dp"
        android:text="@string/cortaunas"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ropaInvierno"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="@string/ropaInvierno"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cartilla"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="@string/cartillaVacunacion"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_appCuidaVet"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="@string/appCuidaVet"
        android:textSize="20sp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        />

    </LinearLayout>
</LinearLayout>

