<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/btn_flcheaRegresar"
        android:layout_width="122dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/flecha" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_registro"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/round_button"
        android:hint="@string/registro"
        android:paddingLeft="14dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="@color/white"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_nombreDuenio"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginTop="70dp"
        android:hint="@string/nombreduenio"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"

        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_correo"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:hint="@string/correo"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_usuarioRegistro"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:hint="@string/usuario"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_contraRegistro"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:hint="@string/contra"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/btn_siguiente"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:hint="@string/siguiente"
        android:textSize="17sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_avisoPrivacidad"
        android:layout_width="200dp"
        android:layout_height="23dp"
        android:hint="@string/avisoPrivasidad"
        android:textSize="12sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textAllCaps="false"
        />




</LinearLayout>

