<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_flcheaRegresar_registro2"
        android:layout_width="122dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/flecha" />

    <TextView
        android:id="@+id/ed_registro2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/round_button"
        android:hint="@string/registro"
        android:paddingLeft="14dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="205dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:scaleType="fitXY"
        android:src="@drawable/fondochicocolor" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_nombreMascota"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginTop="30dp"
        android:hint="@string/nombreMascota"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"

        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_edadMascota"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:hint="@string/edad"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_razaMascota"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:hint="@string/raza"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_empezar"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:hint="@string/empezar"
        android:textSize="17sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:textAllCaps="false"
        />




</LinearLayout>

