<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magenta"

    >

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/logoblanco" />



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_usuario"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:hint="@string/correo"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_contra"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:hint="@string/contra"
        android:textSize="17sp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_iniciar"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:text="@string/iniciar"
        android:textSize="17sp"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_usuarioNuevo"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:text="@string/usuarioNuevo"
        android:textSize="17sp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:textColor="@color/magenta"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

</LinearLayout>