<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CambiarContrasenaActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_regresarDeCambiarContrasena"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:background="@drawable/regresar"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_contrasenaActual"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:hint="@string/contrasena_actual"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_contrasenaNueva"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/nueva_contrase_a"
        android:textSize="17sp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_confirmar"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/confirmar"
        android:textSize="17sp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_edittext"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_guardarContraNueva"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:text="@string/guardar"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logofondochico"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"/>

</LinearLayout>