<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_flechaRegresar_registro"
        android:layout_width="122dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/flecha" />


        <TextView
            android:id="@+id/tv_avisoPrivacidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avisoPrivasidad"
            android:textAlignment="center"
            android:textColor="@color/magenta"
            android:textSize="25dp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_linea"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="15dp"
        android:background="@color/magenta"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="464dp"
        android:fontFamily="@font/alataregular"
        android:text="@string/privacidadTexto"
        android:textAlignment="center"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_hecho"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:text="@string/hecho"
        android:textSize="17sp"
        android:textAlignment="center"
        android:paddingLeft="14dp"
        android:fontFamily="@font/alataregular"
        android:background="@drawable/round_button_white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="107dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/logofondochico" />


</LinearLayout>

